objects/iContactforSF__iContact_Clicked_Link__c.object
<CustomObject>
    <customHelpPage>iContactforSF__iContactHelp</customHelpPage>
    <description>Holds a record of which links from a sent message have been clicked upon, and how often.</description>
    <fields>
        <fullName>iContactforSF__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the campaign.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>iContact Clicked Links</relationshipLabel>
        <relationshipName>iContact_Clicked_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Time__c</fullName>
        <description>The date/time of the message click.</description>
        <inlineHelpText>The date/time of the message click.</inlineHelpText>
        <label>Last Click Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__ClickedLink_ID__c</fullName>
        <description>External ID for iContact clicked link data. Composed of messageid_recipientid_linkhash.</description>
        <externalId>true</externalId>
        <label>ClickedLink_ID</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Clicks__c</fullName>
        <description>Total number of clicks this link has received.</description>
        <inlineHelpText>Total number of clicks this link has received.</inlineHelpText>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this link&apos;s statistic was associated to a Contact record, this field points to that Contact.</description>
        <inlineHelpText>If this link&apos;s statistic was associated to a Contact record, this field points to that Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>iContact Clicked Links</relationshipLabel>
        <relationshipName>iContact_Clicked_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Full_Link__c</fullName>
        <description>The full length link that was clicked from an iContact Sent Message.</description>
        <label>Full Link</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iContactforSF__IdString__c</fullName>
        <description>Hidden field used for bulk sorting of records for pagination.</description>
        <formula>Id&amp;if(mid(Id,10,1)=upper(mid(Id,10,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,11,1)=upper(mid(Id,11,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,12,1)=upper(mid(Id,12,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,13,1)=upper(mid(Id,13,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,14,1)=upper(mid(Id,14,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,15,1)=upper(mid(Id,15,1)), &quot;1&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for bulk sorting of records for pagination.</inlineHelpText>
        <label>IdString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this link&apos;s statistic was associated to a Lead record, this field points to that Lead.</description>
        <inlineHelpText>If this link&apos;s statistic was associated to a Lead record, this field points to that Lead.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>iContact Clicked Links</relationshipLabel>
        <relationshipName>iContact_Clicked_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unique_Clicks__c</fullName>
        <description>Total number of unique users who have clicked on this link at least once.</description>
        <inlineHelpText>Total number of unique users who have clicked on this link at least once.</inlineHelpText>
        <label>Unique Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Message_Statistic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this record is tracking an individual&apos;s link clicks, this will point to their statistics record.</description>
        <inlineHelpText>If this record is tracking an individual&apos;s link clicks, this will point to their statistics record.</inlineHelpText>
        <label>iContact Message Statistic</label>
        <referenceTo>iContactforSF__iContact_Message_Statistic__c</referenceTo>
        <relationshipLabel>iContact Clicked Links</relationshipLabel>
        <relationshipName>iContact_Clicked_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Sent_Message__c</fullName>
        <description>The message this link was contained within.</description>
        <inlineHelpText>The message this link was contained within.</inlineHelpText>
        <label>iContact Sent Message</label>
        <referenceTo>iContactforSF__iContact_Sent_Message__c</referenceTo>
        <relationshipLabel>iContact Clicked Links</relationshipLabel>
        <relationshipName>iContact_Clicked_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>iContact Clicked Link</label>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Clicked Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>